--- a/pgvector-tensorflow-movie-recommendations-workshop/part1-core/.env-example
+++ b/pgvector-tensorflow-movie-recommendations-workshop/part1-core/.env-example
@@ -1,4 +1,4 @@
 PG_NAME=
-PG_PASSWORD=AVNS_h60AHWcIsAF96y79fRC
-PG_HOST=pg-2c8137b9-mrs2024.a.aivencloud.com
-PG_PORT=19419
+PG_PASSWORD=
+PG_HOST=
+PG_PORT=
